[package]
name = "fuse-passthrough"
version = "0.1.0"
edition = "2021"
description = "A passthrough FUSE filesystem that mirrors one directory to another"
license = "MIT"

[dependencies]
fuser = "0.15"
libc = "0.2"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.10"
